Travelover travelover_미니 프로젝트_main_section작업하기

--- a/Travelover/sass/abstracts/_variables.scss
+++ b/Travelover/sass/abstracts/_variables.scss
@@ -1,7 +1,23 @@
-$color-primary:#55c57a;
-$color-primary-right:#7ed56f;
-$color-primary-dark:#28b485;
+// COLORS
+$color_pink_1:#f7bcd0;
+$color_pink_2:#f290b1;
+$color_mint_1:#aafeeb;
+$color_mint_2:#6cfeda;
+$color_mint_3:#32e8b7;
+$color_blue_1:#84d8fd;
+$color_blue_2:#40c4ff;
+$color_blue_3:#00b0ff;
+$color_blue_4:#0091ea;
+$color_purple_1:#7e5bbf;
+$color_white:#FFF;
+$color_black:#000;
+$color_gray_light_1:#f7f7f7;
+$color_gray_dark:#777;
 
-$color-gray-dark:#777;
-$color-white:#FFF;
-$color-black:#000;
+// FONT
+$default_font_size:1.6rem;
+
+// GRID
+$grid_width:114rem;
+$gutter_vertical:8rem;
+$gutter_horizontal:6rem;
