--- a/Travelover/sass/components/_button.scss
+++ b/Travelover/sass/components/_button.scss
@@ -1,33 +1,35 @@
 .btn {
     &:link, &:visited {
-        text-transform:uppercase;
         text-decoration:none;
         padding:1.5rem 4rem;
-        display:inline-block;
+        display:inline-block; /* 버튼 정렬하기 위해서 */
         border-radius:10rem;
-        transition: all .2s;
+        transition:all .2s;
         position:relative;
-        font-size:1.6rem;
+        font-size:$default_font_size;
     }
+
     &:hover {
         transform:translateY(-3px);
-        box-shadow:0 1rem 2rem rgba($color-black, .2);
-        
+        box-shadow:0 1rem 2rem rgba($color_black, .2);
+
         &::after {
-            transform:scaleX(1.4) scaleY(1.6);
+            transform:scaleX(1.4) scaleY(1.7);
             opacity:0;
         }
     }
+
     &:active {
         transform:translateY(-1px);
-        box-shadow:0 .5rem 1rem rgba($color-black, .2);
+        box-shadow:0 .5rem 1rem rgba($color_black, .2);
     }
+
     &::after {
         content:"";
         display:inline-block;
-        height:100%;
         width:100%;
-        border-radius:10rem;
+        height:100%;
+        border-radius:100px;
         position:absolute;
         top:0;
         left:0;
@@ -35,17 +37,39 @@
         transition:all .4s;
     }
 
-    &-white {
-        background-color:$color-white;
-        color:$color-gray-dark;
+    &_white {
+        background-color:$color_white;
+        color:$color_gray_dark;
 
         &::after {
-            background-color:$color-white;
-        }
+            background-color:$color_white;
+        } 
     }
- 
-    &-animated {
-        animation:moveInButtom 1s ease-out .75s;
-        animation-fill-mode:backwards;
+
+    &_animated {
+        animation:moveInBottom .5s ease-in-out .75s;
+        animation-fill-mode:backwards; /* 찾아보기 */
+    }
+}
+
+.btn_text {
+    &:link, &:visited {
+        font-size:$default_font_size;
+        color:$color_mint_3;
+        display:inline-block;
+        text-decoration:none;
+        border-bottom:1px solid $color_mint_3;
+        padding:5px;
+        transition:all .2s;
+    }
+    &:hover {
+        background-color:$color_mint_3;
+        color:$color_white;
+        box-shadow:0 1rem 2rem rgba($color_black, .15);
+        transform:translateY(-2px);
+    }
+    &:active {
+        box-shadow:0 .5rem 1rem rgba($color_black, .15);
+        transform:translateY(0);
     }
 }
