--- a/Travelover/sass/layout/_header.scss
+++ b/Travelover/sass/layout/_header.scss
@@ -1,23 +1,23 @@
 .header {
     height:95vh;
-    background-image:linear-gradient(to right bottom, rgba($color-primary-right, 0.8), rgba($color-primary-dark, 0.8)), url(../img/hero.jpg);
+    background-image:linear-gradient(to right bottom, rgba($color_mint_1, 0.6), rgba($color_purple_1, .6)), url(../img/la_palm_trees_.jpg);
     background-size:cover;
     background-position:top;
-    position:relative;
+    position:relative; /* .logo_box, position 때문에 */
 
-    clip-path:polygon(0 0, 100% 0, 100% 70vh, 0 100%);
+    clip-path:polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 
-    &__logo-box {
+    .logo_box {
         position:absolute;
-        top:40px;
-        left:40px;
-    }
+        top:4rem;
+        left:4rem;
 
-    &__logo {
-        height:35px;
+        .logo {
+            height:3.5rem;
+        }
     }
-
-    &__text-box {
+    .text_box {
+        /* text_box 가운데 정렬하기 위한 코드 */
         position:absolute;
         top:45%;
         left:50%;
