--- a/Travelover/css/style.css
+++ b/Travelover/css/style.css
@@ -1,150 +1,247 @@
-@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800|Nanum+Myeongjo:400,700,800&subset=korean');
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800|Nanum+Myeongjo:400,700,800&subset=korean");
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem); }
+  80% {
+    transform: translateX(1rem); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
 
-/*
-    font-family: 'Nanum Gothic', sans-serif;
-    font-family: 'Nanum Myeongjo', serif;
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(10rem); }
+  80% {
+    transform: translateX(-1rem); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
 
-    color:#80d8ff; // rgb(132, 216, 253)
-    color:#40c4ff; // rgb(72, 197, 252)
-    color:#00b0ff; // rgb(30, 177, 252)
-    color:#0091ea; // rgb(24, 147, 231)
-    // rgb(247, 188, 208) // rgb(242, 144, 177) 
-    // rgb(170, 254, 235) // rgb(108, 254, 218) // rgb(50, 232, 183)
-*/
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(3rem); }
+  100% {
+    opacity: 1;
+    transform: translateY(0); } }
 
-*{
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
-}
+*, *::after, *::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; }
+
 html {
-    color:#444;
-}
+  font-size: 62.5%; }
+
+body {
+  box-sizing: border-box; }
+
+body {
+  font-family: 'Nanum Gothic', sans-serif;
+  font-weight: 400;
+  /* font-size:16px; */
+  line-height: 1.7;
+  color: #777; }
+
+.heading_primary {
+  color: #FFF;
+  text-transform: uppercase;
+  text-align: center;
+  backface-visibility: hidden;
+  /* 찾아보기 */
+  margin-bottom: 6rem; }
+  .heading_primary_main {
+    display: block;
+    font-size: 6rem;
+    letter-spacing: 0.5rem;
+    animation: moveInLeft 1s ease-in-out; }
+  .heading_primary_sub {
+    font-family: 'Nanum Myeongjo', serif;
+    display: block;
+    font-size: 2rem;
+    font-weight: 700;
+    animation: moveInRight 1s ease-in-out; }
+
+.heading_secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient(to right, #aafeeb, #7e5bbf);
+  -webkit-background-clip: text;
+  /* 찾아보기 */
+  color: transparent;
+  transition: all .2s; }
+  .heading_secondary:hover {
+    transform: skewX(-15deg);
+    /* skewY(20deg) scale(1.1) */
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+.heading_tertiary {
+  font-size: 1.6rem;
+  font-weight: 700; }
+
+.paragraph {
+  font-size: 1.6rem; }
+  .paragraph:not(:last-child) {
+    margin-bottom: 3rem; }
+
+.u_center_text {
+  text-align: center; }
+
+.u_margin_bottom_small {
+  margin-bottom: 1.5rem; }
+
+.u_margin_bottom_medium {
+  margin-bottom: 4rem; }
+
+.u_margin_bottom_big {
+  margin-bottom: 8rem; }
+
+.btn:link, .btn:visited {
+  text-decoration: none;
+  padding: 1.5rem 4rem;
+  display: inline-block;
+  /* 버튼 정렬하기 위해서 */
+  border-radius: 10rem;
+  transition: all .2s;
+  position: relative;
+  font-size: 1.6rem; }
+
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+  .btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.7);
+    opacity: 0; }
+
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s; }
+
+.btn_white {
+  background-color: #FFF;
+  color: #777; }
+  .btn_white::after {
+    background-color: #FFF; }
+
+.btn_animated {
+  animation: moveInBottom .5s ease-in-out .75s;
+  animation-fill-mode: backwards;
+  /* 찾아보기 */ }
+
+.btn_text:link, .btn_text:visited {
+  font-size: 1.6rem;
+  color: #32e8b7;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid #32e8b7;
+  padding: 5px;
+  transition: all .2s; }
+
+.btn_text:hover {
+  background-color: #32e8b7;
+  color: #FFF;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+  transform: translateY(-2px); }
+
+.btn_text:active {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  transform: translateY(0); }
+
+.composition {
+  position: relative; }
+  .composition__photo {
+    width: 55%;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    position: absolute;
+    transition: all .3s;
+    z-index: 10;
+    outline-offset: 2rem; }
+    .composition__photo__p1 {
+      left: 0;
+      top: -2rem; }
+    .composition__photo__p2 {
+      right: 0;
+      top: 2rem; }
+    .composition__photo__p3 {
+      left: 20%;
+      top: 10rem; }
+    .composition__photo:hover {
+      outline: 1.5rem solid #32e8b7;
+      transform: scale(1.05) translateY(-0.5rem);
+      box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.5);
+      z-index: 20; }
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.95); }
+
+.row {
+  max-width: 114rem;
+  /*background-color:#eee;*/
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+  .row::after {
+    content: "";
+    display: table;
+    /* 찾아보기 */
+    clear: both; }
+  .row [class^="col_"] {
+    /*background-color:orangered;*/
+    float: left; }
+    .row [class^="col_"]:not(:last-child) {
+      margin-right: 6rem; }
+  .row .col_1_of_2 {
+    width: calc((100% - 6rem) / 2); }
+  .row .col_1_of_3 {
+    width: calc((100% - 2 * 6rem) / 3); }
+  .row .col_2_of_3 {
+    width: calc(2 * ((100% - 2 * 6rem) / 3) + 6rem); }
+  .row .col_1_of_4 {
+    width: calc((100% - 3 * 6rem) / 4); }
+  .row .col_2_of_4 {
+    width: calc(2 * ((100% - 3 * 6rem) / 4) + 6rem); }
+  .row .col_3_of_4 {
+    width: calc(3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem); }
 
 .header {
-    height:95vh;
-    background-image:linear-gradient(to right bottom, rgba(170, 254, 235, .7), rgba(126, 91, 191, .6)), url(/img/la_palm_trees_.jpg);
-    background-size:cover;
-    background-position:top;
-    position:relative;
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, rgba(170, 254, 235, 0.6), rgba(126, 91, 191, 0.6)), url(../img/la_palm_trees_.jpg);
+  background-size: cover;
+  background-position: top;
+  position: relative;
+  /* .logo_box, position 때문에 */
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
+  .header .logo_box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem; }
+    .header .logo_box .logo {
+      height: 3.5rem; }
+  .header .text_box {
+    /* text_box 가운데 정렬하기 위한 코드 */
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
 
-    clip-path:polygon(0 0, 100% 0, 100% 70vh, 0 100%);
-}
-.logo_box {
-    position:relative;
-    top:40px;
-    left:40px;
-}
-.logo {
-    height:35px;
-}
-.h_text_box {
-    position:absolute;
-    top:45%;
-    left:50%;
-    transform:translate(-50%, -50%);
-    text-align:center;
-}
-.heading_primary {
-    color:#FFF;
-    text-transform:uppercase;
-
-    backface-visibility:hidden;
-    margin-bottom:60px;
-}
-.heading_primary_main {
-    font-family: 'Nanum Gothic', sans-serif;
-    display:block;
-    font-size:65px;
-    font-weight:700;
-    margin-bottom:12px;
-    animation:moveInLeft 1s ease-in-out;
-}
-.heading_primary_sub {
-    font-family: 'Nanum Myeongjo', serif;
-    display:block;
-    font-size:25px;
-    animation:moveInRight 1s ease-in-out;
-}
-
-@keyframes moveInLeft {
-    0% {
-        opacity:0;
-        transform:translateX(-100px);
-    }
-    80% {
-        transform:translateX(10px);
-    }
-    100% {
-        opacity:1;
-        transform:translateX(0);
-    }
-}
-@keyframes moveInRight {
-    0% {
-        opacity:0;
-        transform:translateX(200px);
-    }
-    80% {
-        transform:translateX(-10px);
-    }
-    100% {
-        opacity:1;
-        transform:translateX(0);
-    }
-}
-@keyframes moveInButtom {
-    0% {
-        opacity:0;
-        transform:translateY(30px);
-    }
-    100% {
-        opacity:1;
-        transform:translateY(0);
-    }
-}
-
-.btn:link, .btn:visited{
-    font-family: 'Nanum Gothic', sans-serif;
-    text-decoration:none;
-    padding:15px 40px;
-    display:inline-block;
-    border-radius:100px;
-    transition:all .2s;
-    position:relative;
-}
-.btn:hover {
-    transform:translateY(-3px);
-    box-shadow:0 10px 20px rgba(0, 0, 0, .2);
-}
-.btn:active {
-    transform:translateY(-1px);
-    box-shadow:0 5px 10px rgba(0, 0, 0, .2);
-}
-.btn_white {
-    background-color:rgba(255, 255, 255, .7);
-    color:#777;
-}
-.btn::after {
-    content:"";
-    display:inline-block;
-    width:100%;
-    height:100%;
-    border-radius:100px;
-    position:absolute;
-    top:0;
-    left:0;
-    z-index:-1;
-    transition:all .4s;
-}
-.btn_white::after {
-     background-color:rgba(255, 255, 255, .7);
-}
-.btn:hover::after {
-    transform:scaleX(1.4) scaleY(1.6);
-    opacity:0;
-}
-.btn_animated {
-    animation:moveInButtom 1s ease-out .75s;
-    animation-fill-mode:backwards;
-}
+.section_about {
+  background-color: #f7f7f7;
+  padding: 25rem 0;
+  margin-top: -20vh; }
