--- a/Travelover/sass/main.scss
+++ b/Travelover/sass/main.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800|Nanum+Myeongjo:400,700,800&subset=korean');
+
 @import "abstracts/functions";
 @import "abstracts/mixins";
 @import "abstracts/variables";
@@ -8,12 +10,9 @@
 @import "base/utilities";
 
 @import "components/button";
+@import "components/composition";
 
+@import "layout/grid";
 @import "layout/header";
 
 @import "pages/home";
-
-
-
-
-
