Travelover travelover_미니 프로젝트_main_section작업하기2

--- a/Travelover/sass/abstracts/_variables.scss
+++ b/Travelover/sass/abstracts/_variables.scss
@@ -9,9 +9,12 @@ $color_blue_2:#40c4ff;
 $color_blue_3:#00b0ff;
 $color_blue_4:#0091ea;
 $color_purple_1:#7e5bbf;
+$color_yellow_1:#ffb900;
+$color_orange_1:#ff7730;
 $color_white:#FFF;
 $color_black:#000;
 $color_gray_light_1:#f7f7f7;
+$color_gray_light_2:#eee;
 $color_gray_dark:#777;
 
 // FONT
