--- a/Travelover/sass/base/_utilities.scss
+++ b/Travelover/sass/base/_utilities.scss
@@ -10,3 +10,9 @@
 .u_margin_bottom_big {
     margin-bottom:8rem;
 }
+.u_margin_top_big {
+    margin-top:8rem;
+}
+.u_margin_top_huge {
+    margin-top:10rem;
+}
