--- a/Travelover/sass/layout/_header.scss
+++ b/Travelover/sass/layout/_header.scss
@@ -4,7 +4,7 @@
     background-size:cover;
     background-position:top;
     position:relative; /* .logo_box, position 때문에 */
-
+    -webkit-clip-path:polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     clip-path:polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 
     .logo_box {
