--- a/Travelover/sass/pages/_home.scss
+++ b/Travelover/sass/pages/_home.scss
@@ -3,3 +3,21 @@
     padding:25rem 0;
     margin-top:-20vh;
 }
+
+.section_features {
+    padding:20rem 0;
+    background-image:linear-gradient(to right bottom, rgba($color_mint_1, 0.6), rgba($color_purple_1, .6)), url(../img/la_palm_trees_.jpg);
+    background-size:cover;
+    transform:skewY(-7deg);
+    margin-top:-10rem;
+    
+    & > * {
+        transform:skewY(7deg);
+    }
+}
+
+.section_tours {
+    background-color:$color_gray_light_1;
+    padding:25rem 0 50rem 0;
+    margin-top:-10rem;
+}
