--- a/Travelover/sass/abstracts/_variables.scss
+++ b/Travelover/sass/abstracts/_variables.scss
@@ -15,7 +15,9 @@ $color_white:#FFF;
 $color_black:#000;
 $color_gray_light_1:#f7f7f7;
 $color_gray_light_2:#eee;
-$color_gray_dark:#777;
+$color_gray_dark_1:#777;
+$color_gray_dark_2:#999;
+$color_gray_dark_3:#333;
 
 // FONT
 $default_font_size:1.6rem;
