--- a/Travelover/sass/components/_button.scss
+++ b/Travelover/sass/components/_button.scss
@@ -1,5 +1,5 @@
 .btn {
-    &:link, &:visited {
+    &, &:link, &:visited {
         text-decoration:none;
         padding:1.5rem 4rem;
         display:inline-block; /* 버튼 정렬하기 위해서 */
@@ -7,6 +7,10 @@
         transition:all .2s;
         position:relative;
         font-size:$default_font_size;
+
+        // 버튼 요소를 고려한 코드
+        border:none;
+        cursor:pointer;
     }
 
     &:hover {
@@ -19,7 +23,8 @@
         }
     }
 
-    &:active {
+    &:active, &:focus {
+        outline:none;
         transform:translateY(-1px);
         box-shadow:0 .5rem 1rem rgba($color_black, .2);
     }
@@ -39,7 +44,7 @@
 
     &_white {
         background-color:$color_white;
-        color:$color_gray_dark;
+        color:$color_gray_dark_1;
 
         &::after {
             background-color:$color_white;
@@ -65,6 +70,7 @@
     &:link, &:visited {
         font-size:$default_font_size;
         color:$color_mint_3;
+        font-weight:700;
         display:inline-block;
         text-decoration:none;
         border-bottom:1px solid $color_mint_3;
