--- a/Travelover/sass/main.css
+++ b/Travelover/sass/main.css
@@ -149,8 +149,8 @@ body {
   text-transform: uppercase;
   font-weight: 700;
   display: inline-block;
-  background-image: -webkit-gradient(linear, left top, right top, from(#aafeeb), to(#7e5bbf));
-  background-image: linear-gradient(to right, #aafeeb, #7e5bbf);
+  background-image: -webkit-gradient(linear, left top, right top, from(#6cfeda), to(#7e5bbf));
+  background-image: linear-gradient(to right, #6cfeda, #7e5bbf);
   -webkit-background-clip: text;
   /* 찾아보기 */
   color: transparent;
@@ -179,30 +179,48 @@ body {
 }
 
 .u_center_text {
-  text-align: center;
+  text-align: center !important;
 }
 
 .u_margin_bottom_small {
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.5rem !important;
 }
 
 .u_margin_bottom_medium {
-  margin-bottom: 4rem;
+  margin-bottom: 4rem !important;
 }
 
 .u_margin_bottom_big {
-  margin-bottom: 8rem;
+  margin-bottom: 8rem !important;
 }
 
 .u_margin_top_big {
-  margin-top: 8rem;
+  margin-top: 8rem !important;
 }
 
 .u_margin_top_huge {
-  margin-top: 10rem;
+  margin-top: 10rem !important;
 }
 
-.btn:link, .btn:visited {
+.bg_video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: .5;
+  /*overflow:hidden;*/
+}
+
+.bg_video__content {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.btn, .btn:link, .btn:visited {
   text-decoration: none;
   padding: 1.5rem 4rem;
   display: inline-block;
@@ -212,6 +230,8 @@ body {
   transition: all .2s;
   position: relative;
   font-size: 1.6rem;
+  border: none;
+  cursor: pointer;
 }
 
 .btn:hover {
@@ -227,7 +247,8 @@ body {
   opacity: 0;
 }
 
-.btn:active {
+.btn:active, .btn:focus {
+  outline: none;
   -webkit-transform: translateY(-1px);
           transform: translateY(-1px);
   -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
@@ -277,6 +298,7 @@ body {
 .btn_text:link, .btn_text:visited {
   font-size: 1.6rem;
   color: #32e8b7;
+  font-weight: 700;
   display: inline-block;
   text-decoration: none;
   border-bottom: 1px solid #32e8b7;
@@ -527,6 +549,241 @@ body {
   color: transparent;
 }
 
+.form__group:not(:last-child) {
+  margin-bottom: 2rem;
+}
+
+.form__input {
+  font-size: 1.5rem;
+  font-family: inherit;
+  color: inherit;
+  padding: 1.5rem 2rem;
+  border-radius: 2px;
+  background-color: rgba(255, 255, 255, 0.7);
+  border: none;
+  border-bottom: 3px solid transparent;
+  width: 90%;
+  display: block;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.form__input:focus {
+  outline: none;
+  -webkit-box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+          box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+  border-bottom: 3px solid #32e8b7;
+}
+
+.form__input:focus:invalid {
+  border-bottom: 3px solid #ff7730;
+}
+
+.form__input::-webkit-input-placeholder {
+  color: #999;
+}
+
+.form__label {
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-left: 2rem;
+  margin-top: .7rem;
+  display: block;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.form__input:placeholder-shown + .form__label {
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transform: translateY(-4rem);
+          transform: translateY(-4rem);
+}
+
+.form__radio_group {
+  width: 49%;
+  display: inline-block;
+}
+
+.form__radio_input {
+  display: none;
+}
+
+.form__radio_label {
+  font-size: 1.6rem;
+  cursor: pointer;
+  position: relative;
+  padding-left: 4rem;
+}
+
+.form__radio_button {
+  width: 3rem;
+  height: 3rem;
+  border: 5px solid #32e8b7;
+  border-radius: 50%;
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  top: -.45rem;
+}
+
+.form__radio_button::after {
+  content: "";
+  display: block;
+  width: 1.3rem;
+  height: 1.3rem;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background-color: #32e8b7;
+  opacity: 0;
+  -webkit-transition: opacity .2s;
+  transition: opacity .2s;
+}
+
+.form__radio_input:checked ~ .form__radio_label .form__radio_button::after {
+  opacity: 1;
+}
+
+.story {
+  width: 75%;
+  margin: 0 auto;
+  -webkit-box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+          box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 6rem;
+  padding-left: 9rem;
+  font-size: 1.6rem;
+  -webkit-transform: skewX(-15deg);
+          transform: skewX(-15deg);
+}
+
+.story__shape {
+  /*background-color:orangered;*/
+  width: 13rem;
+  height: 13rem;
+  float: left;
+  shape-outside: circle(50% at 50% 50%);
+  -webkit-clip-path: circle(50% at 50% 50%);
+  clip-path: circle(50% at 50% 50%);
+  -webkit-transform: translateX(-3rem) skewX(15deg);
+          transform: translateX(-3rem) skewX(15deg);
+  position: relative;
+}
+
+.story__img {
+  height: 100%;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+}
+
+.story__text {
+  -webkit-transform: skewX(15deg);
+          transform: skewX(15deg);
+}
+
+.story__caption {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0%);
+          transform: translate(-50%, 0%);
+  font-size: 1.7rem;
+  font-weight: 700;
+  color: #FFF;
+  text-transform: uppercase;
+  text-align: center;
+  opacity: 0;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+.story:hover .story__caption {
+  opacity: 1;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.story:hover .story__img {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-filter: blur(2px) brightness(80%);
+          filter: blur(2px) brightness(80%);
+}
+
+.footer {
+  background-color: #333;
+  padding: 10rem 0;
+  font-size: 1.4rem;
+}
+
+.footer__logo_box {
+  text-align: center;
+  margin-bottom: 8rem;
+}
+
+.footer__logo {
+  width: 7rem;
+  height: auto;
+}
+
+.footer__navigation {
+  border-top: 1px solid #eee;
+  padding-top: 2rem;
+  display: inline-block;
+}
+
+.footer__list {
+  list-style: none;
+}
+
+.footer__item {
+  display: inline-block;
+}
+
+.footer__item:not(:last-child) {
+  margin-right: 1.5rem;
+}
+
+.footer__link:link, .footer__link:visited {
+  background-color: #333;
+  color: #f7f7f7;
+  text-decoration: none;
+  text-transform: uppercase;
+  display: inline-block;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
+.footer__link:hover, .footer__link:active {
+  color: #32e8b7;
+  -webkit-box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
+          box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
+  -webkit-transform: rotate(5deg) scale(1.2);
+          transform: rotate(5deg) scale(1.2);
+}
+
+.footer__copyright {
+  border-top: 1px solid #eee;
+  padding-top: 2rem;
+  color: #f7f7f7;
+  width: 75%;
+  float: right;
+}
+
+.footer__copyright .footer__link {
+  text-transform: none;
+}
+
 .row {
   max-width: 114rem;
   /*background-color:#eee;*/
@@ -596,7 +853,7 @@ body {
 }
 
 .header .logo_box .logo {
-  height: 3.5rem;
+  height: 4.5rem;
 }
 
 .header .text_box {
@@ -632,7 +889,33 @@ body {
 
 .section_tours {
   background-color: #f7f7f7;
-  padding: 25rem 0 50rem 0;
+  padding: 25rem 0 10rem 0;
   margin-top: -10rem;
+}
+
+.section_stories {
+  /* background-color:$color_gray_light_1; */
+  position: relative;
+  padding: 12rem 0;
+}
+
+.section_book {
+  padding: 12rem 0;
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#84d8fd), to(#7e5bbf));
+  background-image: linear-gradient(to right bottom, #84d8fd, #7e5bbf);
+}
+
+.book {
+  /*background-image:linear-gradient(105deg, transparent 0%, transparent 50%, rgba($color_white, .5) 50%), url(../img/brooklyn_bridge_2.jpg);*/
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0.7) 50%, transparent 50%), url(../img/brooklyn_bridge_2.JPG);
+  background-size: cover;
+  -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+          box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  height: 50rem;
+}
+
+.book__form {
+  width: 50%;
+  padding: 4rem 6rem;
 }
 /*# sourceMappingURL=main.css.map */
