--- a/Travelover/sass/main.scss
+++ b/Travelover/sass/main.scss
@@ -9,11 +9,15 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/bg_video";
 @import "components/button";
 @import "components/card";
 @import "components/composition";
 @import "components/feature_box";
+@import "components/form";
+@import "components/story";
 
+@import "layout/footer";
 @import "layout/grid";
 @import "layout/header";
 
